tests/ok/prelude-io.ari
fn main() -> i64 {
  io::write_i64(42);
  io::newline();
  io::write_u64(18446744073709551615u64);
  io::newline();
  write_bool(true);
  newline();
  write_byte(65);
  newline();
  return 0;
}
