tests/errors/enum-nested-aggregate-payload-mixed-slot.ari
enum Inner {
  Empty,
  Big(i64),
}

enum Mixed {
  Number(i64),
  Wrapped(Inner),
}

fn main() -> i64 {
  return 0;
}
